tests/ui/pattern/issue-110508.stderr
error: associated constant `A5` is never used
  --> $DIR/issue-110508.rs:14:11
   |
LL | impl Foo {
   | -------- associated constant in this implementation
...
LL |     const A5: u32 = 1;
   |           ^^
   |
note: the lint level is defined here
  --> $DIR/issue-110508.rs:1:9
   |
LL | #![deny(dead_code)]
   |         ^^^^^^^^^

error: aborting due to 1 previous error

